tests/snapshots/examples_fixtures/primop__maps.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/maps.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 3rd argument to `put` has the wrong type.

  --> examples/primop/maps.flx:5:30
  |
5 |     let m2 = put(m1, "year", 2026);
  |                              ^^^^
  |                              ---- this argument is `Int`

Help:
  Expected `String` as the 3rd argument.
== stdout ==
<not executed>
